Swap from @md to @lg breakpoint to avoid overflow issues.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -29,7 +29,7 @@
     font-size: 5.75rem;
     font-weight: 600;
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       font-size: 3rem;
     }
   }
@@ -39,7 +39,7 @@
     font-size: 2.0rem;
     font-weight: 500;
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       font-size: 1rem;
     }
   }
@@ -49,7 +49,7 @@
     padding-bottom: 0;
     overflow: visible;
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       padding: 0;
     }
   }
@@ -69,7 +69,7 @@
     right: 0.6rem;
     position: relative;
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       margin-top: 7.5rem;
     }
   }
@@ -99,14 +99,14 @@
     }
 
     // Override the section-text mobile settings
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       max-width: 18rem;
       padding: 1.5rem 1.5rem !important;
     }
   }
 
   .section-text {
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       padding: 0.5rem;
       max-inline-size: 100%;
     }
@@ -140,7 +140,7 @@
     height: 76.875rem;
     background-color: var(--bg);
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       height: calc(76.875rem * 2);
     }
   }
@@ -330,7 +330,7 @@
       }
     }
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       margin-top: -2rem;
       gap: 0;
 
@@ -555,7 +555,7 @@
     margin-bottom: 2rem;
 
     /*
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       &::after {
         top: -306px;
         left: -208px;
@@ -568,7 +568,7 @@
       }
     }
      */
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       height: 6.25rem;
 
       #donate-banner-right {
